changed h1 back to Who's your DIGIMON?

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 
 <body class="flex wrapper">
-    <h1 class='changeScript'>I prefer pokemon but I'm sure digimon is good too</h1>
+    <h1 class='changeScript'>Who's your DIGIMON?</h1>
     
     <h2 class='changeScript'>Press DigiRoll to find out now!</h2>
 
