--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 
 <body class="flex wrapper">
-    <h1 class='changeScript'>I prefer pokemon but I'm sure digimon is good too</h1>
+    <h1 class='changeScript'>what did I say about pokemon!!! stop trying to change your h1 back!!!!!!!!!</h1>
     
     <h2 class='changeScript'>Press DigiRoll to find out now!</h2>
 
