chaged document title

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Who's Your Digimon? (Working Title)</title>
+    <title>Who's Your Digimon?</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 
