completed media query and final compilation of SASS

--- a/index.html
+++ b/index.html
@@ -5,10 +5,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Who's Your DIGIMON?</title>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="styles/style.css">
 </head>
 
-<body class="flex wrapper">
+<body class='flex wrapper'>
 
     <h1 class='changeScript'>Who's your DIGIMON?</h1>
     
@@ -27,7 +27,6 @@
         <div></div>
         <div></div>
     </main>
-
 
     <h3>To change the language that you see use the button below!</h3>
 
